# AutonomousDrivingROS

./: .gitattributes  .gitignore  README.md  default_rviz_config.rviz
Docker/: Dockerfile  ros_noetic_docker.txt
ros_ws/devel/lib/simulation/: state_estimate_corruptor_node  unity_ros  w_to_unity
ros_ws/devel/lib/simulation/Car_build_Data/: app.info  globalgamemanagers  globalgamemanagers.assets  level0  resources.assets
ros_ws/src/AutonomousDriving/src/: .gitignore
ros_ws/src/AutonomousDriving/src/depth_semantic_road/: CMakeLists.txt  package.xml
ros_ws/src/AutonomousDriving/src/depth_semantic_road/src/: depth_semantic_fusion_node.py
ros_ws/src/AutonomousDriving/src/integrated_controller/: CMakeLists.txt
ros_ws/src/AutonomousDriving/src/lane_detection/src/: lane_detection.cpp
ros_ws/src/AutonomousDriving/src/obstacle_detection/: package.xml
ros_ws/src/AutonomousDriving/src/obstacle_detection/src/: obstacle_detection.cpp
ros_ws/src/AutonomousDriving/src/path_planner/: CMakeLists.txt  package.xml
ros_ws/src/AutonomousDriving/src/path_planner/config/: base_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
ros_ws/src/AutonomousDriving/src/path_planner/src/: path_planner_node.py
ros_ws/src/AutonomousDriving/src/path_tracker/: CMakeLists.txt
ros_ws/src/AutonomousDriving/src/perception_pipeline/: CMakeLists.txt  package.xml
ros_ws/src/AutonomousDriving/src/perception_pipeline/src/: fix_depth_frame.py  point_cloud_frame_fix.py
ros_ws/src/AutonomousDriving/src/semaphore_detection/: package.xml
ros_ws/src/AutonomousDriving/src/simulation/launch/: simulation.launch
ros_ws/src/AutonomousDriving/src/simulation/rviz/: default_rviz_config.rviz
ros_ws/src/checkpoint_handler/: CMakeLists.txt  package.xml
ros_ws/src/checkpoint_handler/src/: checkpoint_handler_node.py
ros_ws/src/controller_pkg/: package.xml
ros_ws/src/controller_pkg/src/: controller_node.cpp
ros_ws/src/integrated_controller/: package.xml
ros_ws/src/integrated_controller/launch/: launch_all_nodes.launch
ros_ws/src/integrated_controller/src/: integrated_controller.cpp
ros_ws/src/lane_detection/: CMakeLists.txt  package.xml
ros_ws/src/obstacle_detection/: CMakeLists.txt
ros_ws/src/octomap_mapping/octomap_server/launch/: octomap_mapping.launch
ros_ws/src/octomap_pipeline/: CMakeLists.txt  package.xml
ros_ws/src/octomap_pipeline/src/: traffic_light_detector.py
ros_ws/src/octomap_server/launch/: octomap_mapping.launch
ros_ws/src/path_tracker/: CMakeLists.txt  package.xml
ros_ws/src/path_tracker/src/: path_tracker_node.cpp  path_tracker_node.py
ros_ws/src/perception_pipeline/: CMakeLists.txt  package.xml
ros_ws/src/perception_pipeline/launch/: perception.launch
ros_ws/src/perception_pipeline/msg/: RedLightDetection.msg
ros_ws/src/perception_pipeline/src/: traffic_light_detector.py
ros_ws/src/planning/: CMakeLists.txt  package.xml
ros_ws/src/planning/params/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
ros_ws/src/semaphore_detection/: CMakeLists.txt
ros_ws/src/semaphore_detection/src/: semaphore_detection.cpp
ros_ws/src/simulation/launch/: simulation.launch
ros_ws/src/simulation/rviz/: autonomous.rviz
ros_ws/src/simulation/src/: state_estimate_corruptor_node.cpp
ros_ws/src/state_machine/: CMakeLists.txt  package.xml
ros_ws/src/state_machine/scripts/: state_machine.py  state_machine_v2.py
ros_ws/src/transform_pointcloud_node/: CMakeLists.txt  package.xml
ros_ws/src/transform_pointcloud_node/src/: transform_pointcloud_node.cpp
